# epicpen-linux

./: .gitignore  README.md  epicpen.desktop  index.html  pyproject.toml  run.sh
.githooks/: commit-msg  post-checkout  pre-commit  pre-merge-commit  pre-push
.github/workflows/: build-appimage.yml  pr-check.yml  release.yml  tests.yml
docs/: CONTRIBUTING.md
lib/: libLayerShellQtInterface.so.6
scripts/: build_appimage.sh  generate_icon.py  patch_layershell.py  release.sh  setup_dev.sh
src/: capture_helper.py  config.py  cursors.py  hostenv.py  hotkeys.py  icons.py  instance_guard.py  keepabove.py  kwincursor.py  kwinshot.py  layershell.py  livegrab.py  magnifier.py  main.py  overlay.py  recorder.py  screens.py  screenshot.py  toolbar.py  tray.py
tests/: conftest.py  test_config.py  test_overlay_logic.py  test_recorder.py  test_screens.py  test_screenshot.py
