[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "epicpen-linux"
version = "1.1.0"
description = "Reimplementação open-source do EpicPen para Linux como AppImage"
requires-python = ">=3.11"
dependencies = ["PyQt6>=6.6", "pynput>=1.7"]

[project.scripts]
epicpen = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v"

[tool.setuptools.packages.find]
where = ["src"]
